AMPS-224: attempting to fix AMPS FeCru OutOfMemoryError by moving FeCru back out-of-process (again) using r43875 for reference.
git-svn-id: https://studio.atlassian.com/svn/AMPS/trunk@58629 2c54a935-e501-0410-bc05-97a93f6bca70